--- a/tests/index.html
+++ b/tests/index.html
@@ -110,10 +110,10 @@
         timestamp: new Date().toISOString()
       };
 
-      fetch("https://vlnqtokemorywhdavosy.supabase.co/functions/v1/smart-meter-webhook", {
+      fetch("https://rcthtxwzsqvwivritzln.supabase.co/functions/v1/smart-meter-webhook", {
         method: 'POST',
         headers: { 'Content-Type': 'application/json',
-           'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZsbnF0b2tlbW9yeXdoZGF2b3N5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTEyNzc2NDEsImV4cCI6MjA2Njg1MzY0MX0.eseSJx2EK4KctwYybk8CghVLVV0x2GNQXem3aP7bThg'
+           'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjdGh0eHd6c3F2d2l2cml0emxuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI2NzM2MjAsImV4cCI6MjA2ODI0OTYyMH0._bSOH4oY3Ug1l-NY7OPnXQr4Mt5mD7WgugNKjlwWAkM'
          },
         body: JSON.stringify(payload)
       })
