--- a/tests/index.html
+++ b/tests/index.html
@@ -142,6 +142,14 @@ function spin() {
     kwh_consumed: parseFloat(kwh),
     timestamp: new Date().toISOString()
   };
+ new Response(JSON.stringify(response), {
+  headers: {
+    "Content-Type": "application/json",
+    "Access-Control-Allow-Origin": "*", // or your site domain
+    "Access-Control-Allow-Methods": "POST",
+    "Access-Control-Allow-Headers": "Authorization, Content-Type"
+  }
+});
 
   fetch("https://rcthtxwzsqvwivritzln.supabase.co/functions/v1/super-action", {
     method: 'POST',
